landing fully built up to loading nav

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
       <div id="bunTopper"></div>
     </div>
 
+    <div id="surpriseDiv">
+      <p>You are viewing a single page web application driven by HTML5, CSS3, Bootstrap 4.0, and JQuery 3.1.1.</p>
+    </div>
+
     <div id="landingDiv">
       <div id="nameLines">
         <p>Joe</p>
@@ -25,6 +29,32 @@
         </div>
       </div>
     </div>
+
+    <div id="navScreenDiv">
+      <div class="jumbotron navTron container">
+        <ul class="navUL">
+          <li class="navBtns" id="resumeBtn" role="button"><span>Resume | CV</span></li>
+          <li class="navBtns" id="websitesBtn" role="button"><span>Websites</span></li>
+          <li class="navBtns" id="gamesBtn" role="button"><span>Games | Apps</span></li>
+          <li class="navBtns" id="designBtn" role="button"><span>Design | Graphics</span></li>
+          <li class="navBtns" id="artBtn" role="button"><span>Art</span></li>
+          <li class="navBtns" id="aboutBtn" role="button"><span>About</span></li>
+        </ul>
+      </div>
+    </div>
+
+    <div id="resumeDiv"></div>
+
+    <div id="websitesDiv"></div>
+
+    <div id="gamesDiv"></div>
+
+    <div id="designDiv"></div>
+
+    <div id="artDiv"></div>
+
+    <div id="aboutDiv"></div>
+
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>    
