jammed layout together on games page

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </div>
       <!--School Work Div-->
       <div id="schoolProjects">
-        <h1 id="schoolProjText">Scholastic:</h1>
+        <h1 id="schoolProjText">SCHOLASTIC:</h1>
         <div class="gamesImgContainer" id="vanGoghLink">
           <a href="https://joewrightnc.github.io/Hangman-Game/" target="_blank">
           <img id="vangoghImg" class="gamesImg" src="assets/images/vangogh.jpg" alt="vanGoghImg">
