redesigned about page

--- a/index.html
+++ b/index.html
@@ -128,18 +128,20 @@
           <span class="aboutTextBanners" id="gitBanner">
             Github
           </span>
-          </a>
+          <img class="aboutIcons" src="assets/images/github.png" alt="github">
+        </a>
           <div class="aboutOverlay" id="gitOverlay">
             <div class="text">Click to visit my Github</div>
           </div>
         </div>
         <div class="col aboutBtwnBanners"></div>
-        <div class="col aboutBanners">
+        <div class="col aboutBanners" id="cultureCol">
           <span class="aboutTextBanners" id="cultureBanner">
-            A Culture Fit?
+            Culture Fit?
           </span>
+          <img class="aboutIcons" src="assets/images/sunglasses.png" alt="culture">
           <div class="aboutOverlay" id="cultureOverlay">
-            <div class="text">Personal Stuff Forthcoming</div>
+            <div class="text">Click for Dogs, Cats, Et. Al</div>
           </div>
         </div>
         <div class="col aboutBtwnBanners"></div>
@@ -148,18 +150,20 @@
           <span class="aboutTextBanners" id="linkedBanner">
               LinkedIn
           </span>
+          <img class="aboutIcons" src="assets/images/linkedin.jpeg" alt="linkedin">
           </a>
           <div class="aboutOverlay" id="linkedOverlay">
             <div class="text">Click to visit my LinkedIn</div>
           </div>
         </div>
         <div class="col aboutBtwnBanners"></div>
-        <div class="col aboutBanners">
+        <div class="col aboutBanners" id="aboutCol">
           <span class="aboutTextBanners" id="pageBanner">
             About This Page
           </span>
+          <img class="aboutIcons" src="assets/images/tools.jpg" alt="about">
           <div class="aboutOverlay" id="pageOverlay">
-            <div class="text">About this Page Coming Soon</div>
+            <div class="text">Click for flashy words pt: <span id="partCounter">2</span></div>
           </div>
         </div>
         <div class="col aboutBtwnBanners"></div>
@@ -168,6 +172,8 @@
           <span class="aboutTextBanners" id="emailBanner">
             Email
           </span>
+          <img class="aboutIcons" src="assets/images/email.png" alt="email">
+
           </a>
           <div class="aboutOverlay" id="emailOverlay">
             <div class="text">Click to send me an Email</div>
