--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
 
     <div id="aboutDiv">
       <div class="row aboutRow">
-        <div class="col aboutBtwnBanners"></div>
+        <div class="col aboutBtwnBanners">
+        </div>
         <div class="col aboutBanners" id="gitCol">
           <a href="https://github.com/JoeWrightNC" target="_blank">
           <span class="aboutTextBanners" id="gitBanner">
@@ -134,7 +135,8 @@
             <div class="text">Click to visit my Github</div>
           </div>
         </div>
-        <div class="col aboutBtwnBanners"></div>
+        <div class="col aboutBtwnBanners">
+        </div>
         <div class="col aboutBanners" id="cultureCol">
           <span class="aboutTextBanners" id="cultureBanner">
             Culture Fit?
@@ -144,7 +146,8 @@
             <div class="text">Click for Dogs, Cats, Et. Al</div>
           </div>
         </div>
-        <div class="col aboutBtwnBanners"></div>
+        <div class="col aboutBtwnBanners">
+        </div>
         <div class="col aboutBanners" id="linkedCol">
           <a href="https://www.linkedin.com/in/joewrightnc/" target="_blank">
           <span class="aboutTextBanners" id="linkedBanner">
@@ -156,7 +159,8 @@
             <div class="text">Click to visit my LinkedIn</div>
           </div>
         </div>
-        <div class="col aboutBtwnBanners"></div>
+        <div class="col aboutBtwnBanners">
+        </div>
         <div class="col aboutBanners" id="aboutCol">
           <span class="aboutTextBanners" id="pageBanner">
             About This Page
@@ -166,7 +170,8 @@
             <div class="text">Click for flashy words pt: <span id="partCounter">2</span></div>
           </div>
         </div>
-        <div class="col aboutBtwnBanners"></div>
+        <div class="col aboutBtwnBanners">
+        </div>
         <div class="col aboutBanners" id="emailCol">
           <a href="mailto:JoeWrightWebDev@gmail.com" target="_top">
           <span class="aboutTextBanners" id="emailBanner">
@@ -179,7 +184,29 @@
             <div class="text">Click to send me an Email</div>
           </div>
         </div>
-        <div class="col aboutBtwnBanners"></div>
+        <div class="col aboutBtwnBanners">
+        </div>
+      </div>
+    </div>
+
+    <div id="cultureFitDiv">
+      <div id="progressArrows">
+        <img id="arrows" src="assets/images/arrows.png" alt="arrows">
+      </div>
+      <div id="catsAndDogs">
+        Joe likes cats and dogs
+      </div>
+      <div id="arts">
+        joe likes art
+      </div>
+      <div id="music">
+        joe likes music
+      </div>
+      <div id="campingOutdoors">
+        joe likes outdoors stuff
+      </div>
+      <div id="coding">
+        joe likes coding
       </div>
     </div>
 
