first page of culture fit done

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="col">
               <div class="gamesImgContainer" id="vanGoghLink">
                 <a href="https://joewrightnc.github.io/Hangman-Game/" target="_blank">
-                  <img id="vangoghImg" class="gamesImg" src="assets/images/add.png" alt="vanGoghImg">
+                  <img id="vangoghImg" class="gamesImg" src="assets/images/plus.png" alt="vanGoghImg">
                   <div class="gamesOverlay">
                     <div class="text">Vanilla JS Based Hangman -- Van Gogh Loses His Ear Edition; Click to Play</div>
                   </div>
@@ -76,7 +76,7 @@
           <div class="col">
             <div class="gamesImgContainer" id="crystalLink">
               <a href="https://joewrightnc.github.io/Crystal-Game/" target="_blank">
-                <img id="crystalsImg" class="gamesImg" src="assets/images/add.png" alt="crystalsImg">
+                <img id="crystalsImg" class="gamesImg" src="assets/images/plus.png" alt="crystalsImg">
                 <div class="gamesOverlay">
                   <div class="text">JQuery Based Strategy Game; Click to Play</div>
                 </div>
@@ -89,7 +89,7 @@
           <div class="col">
             <div class="gamesImgContainer" id="rpgLink">
               <a href="https://joewrightnc.github.io/week-4-game/" target="_blank">
-                <img id="rpgImg" class="gamesImg" src="assets/images/add.png" alt="rpgImg">
+                <img id="rpgImg" class="gamesImg" src="assets/images/plus.png" alt="rpgImg">
                 <div class="gamesOverlay">
                   <div class="text">Jquery Based Super Smash Bros RPG; Click to Play</div>
                 </div>
@@ -102,7 +102,7 @@
           <div class="col">
             <div class="gamesImgContainer" id="triviaLink">
               <a href="https://joewrightnc.github.io/TriviaGame/" target="_blank">
-                <img id="triviaImg" class="gamesImg" src="assets/images/add.png" alt="triviaImg">
+                <img id="triviaImg" class="gamesImg" src="assets/images/plus.png" alt="triviaImg">
                 <div class="gamesOverlay">
                   <div class="text">Multi Category Trivia Game using Jquery + Timers</div>
                 </div>
@@ -194,19 +194,47 @@
         <img id="arrows" src="assets/images/arrows.png" alt="arrows">
       </div>
       <div id="catsAndDogs">
-        Joe likes cats and dogs
+          <div class="jumbotron cultureBlock">
+            <span class=cultureHeading>Cats | Dogs</span>
+            <p>Yes, I love Both cats and dogs.  If we get to know each other, you'll get to know this because I talk about my animals, like, a lot.  I even have them on my mousepad, see that over there?  If you want to see more of these sweeties give that mousepad a click.</p>
+            <p>Lucy was my first pet, and she is a rescue kitty.  I rescued her directly, actually.  I found her at just a couple of days old when out with some friends one evening.  She needed help, and despite being very allergic I couldn't say no.  Now she is my number one workspace invader.</p>
+            <p>Rainer was also a rescue, and has been with the family for about 2 years now.  He had terrible seperation anxiety, but with lots of love he is now the most good boy (I tell him every day).  He never barks, and is always the most popular guy at the Dog Park</p>
+            <p>I'm more than just cats and dogs though, click that arrow to see more.</p>
+            <img class="nextArrow" src="assets/images/next.png" alt="email">
+            <img id="petPad" src="assets/images/pets.JPG" alt="pets">
+          </div>
+          <div id="hiddenPets">
+            <div class="hiddenPetsClass">
+            <img id="lucy" class="hiddenPetsImg" src="assets/images/lucy.jpg" alt="pets">
+            </div>
+            <div class="hiddenPetsClass">
+              <img id="rainer" class="hiddenPetsImg" src="assets/images/rainer.JPG" alt="pets">
+            </div>
+          </div>
       </div>
-      <div id="arts">
-        joe likes art
+      <div id="books">
+        <div class="jumbotron cultureBlock">
+          Joe likes books
+          <img class="nextArrow" src="assets/images/next.png"  alt="nextArrow">
+        </div>
       </div>
       <div id="music">
-        joe likes music
+        <div class="jumbotron cultureBlock">
+          Joe likes music
+          <img class="nextArrow" src="assets/images/next.png"  alt="nextArrow">
+        </div>
       </div>
       <div id="campingOutdoors">
-        joe likes outdoors stuff
+        <div class="jumbotron cultureBlock">
+          Joe likes camping
+          <img class="nextArrow" src="assets/images/next.png"  alt="nextArrow">
+        </div>
       </div>
       <div id="coding">
-        joe likes coding
+        <div class="jumbotron cultureBlock">
+          Joe likes coding
+          <img class="nextArrow" src="assets/images/next.png"  alt="nextArrow">
+        </div>
       </div>
     </div>
 
