two more pages of culture fit

--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@
             <p>Lucy was my first pet, and she is a rescue kitty.  I rescued her directly, actually.  I found her at just a couple of days old when out with some friends one evening.  She needed help, and despite being very allergic I couldn't say no.  Now she is my number one workspace invader.</p>
             <p>Rainer was also a rescue, and has been with the family for about 2 years now.  He had terrible seperation anxiety, but with lots of love he is now the most good boy (I tell him every day).  He never barks, and is always the most popular guy at the Dog Park</p>
             <p>I'm more than just cats and dogs though, click that arrow to see more.</p>
-            <img class="nextArrow" src="assets/images/next.png" alt="email">
-            <img id="petPad" src="assets/images/pets.JPG" alt="pets">
+            <img class="nextArrow" id="petsArrow" src="assets/images/next.png" alt="email">
+            <img class="cultureBodyIcons" id="petPad" src="assets/images/pets.JPG" alt="pets">
           </div>
           <div id="hiddenPets">
             <div class="hiddenPetsClass">
@@ -212,16 +212,55 @@
             </div>
           </div>
       </div>
-      <div id="books">
+      <div id="music">
+        <div id="favoriteBands">
+        </div>
         <div class="jumbotron cultureBlock">
-          Joe likes books
-          <img class="nextArrow" src="assets/images/next.png"  alt="nextArrow">
+          <span class=cultureHeading>Music</span>
+          <p>Like so many, I too am a lover of music.  If we work together, one of the first things you'd probably notice me doing is asking you what type of music you're into.  I'm beyond casually into everything, and it is almost always a great place for me to start when getting to know someone new. </p>
+          <p>Some favorite genres include: post rock, folk/grassroots, hip hop, indie rock, psych rock, bluegrass--the list really goes on.  I had a radio show for 8 years on WKNC in Raleigh playing post rock, so I know the most there.  I've booked for several venues in Raleigh, including my own I ran for 3 years, and at the end of the day am most passionate about local music.</p>
+          <p>I play too, guitar since I was 4 years old.  I joke that I can play anything with strings on it, but it's pretty true.  Lately I've been most excited about fiddle and open tunings on my 12 string electric.</p>
+          <p>Hit that guitar button to see a random selection from my favorite bands.  When you're done, the arrow moves you on along.</p>
+          <img class="cultureBodyIcons" id="guitar" src="assets/images/guitar.png" alt="guitar">
+          <img id="musicArrow" class="nextArrow" src="assets/images/next.png"  alt="nextArrow">
         </div>
       </div>
-      <div id="music">
-        <div class="jumbotron cultureBlock">
-          Joe likes music
+      <div id="books">
+        <div class="jumbotron cultureBlock" id="booksBlock">
+          <span class=cultureHeading>Books</span>
+          <p>I love to read.  I've gone through a lot of phases in what I like to read most, but my first and most enduring passion is for poetry.  Vladamir Mayakovsky, a Russian Futurist, was the first poet I ever became enamoured with.  After several other favorites, I found Rainer Maria Rilke at 19 and hes topped my list ever since.  If you want to read one of my favorite short poems from Rilke, click that book icon.  The same icon will close the poem when you're finished.</p>
+          <p>If you've already been by my resume, you know I have my Masters in Literature.  For those two years my focus was in Modernism and Postmodernism, but don't worry I also like Harry Potter.  Even if you're not a reader, you'll no doubt learn to appreciate my occasional literary joke (normally referencing James Joyce) that often I'm the only person who knew it was a joke and almost always am the only who finds it funny.</p>
+          <p>Once you've apprecaited that Rilke poem, the arrow moves you forward.</p>
+          <img class="cultureBodyIcons" id="openBook" src="assets/images/book.png" alt="book">
           <img class="nextArrow" src="assets/images/next.png"  alt="nextArrow">
+        </div>
+        <div id="secretPoemDiv">
+          <p>
+              God speaks to each of us as he makes us,</p><p>
+              then walks with us silently out of the night.
+              </p><br><br><br><br><br><br><p>
+              These are the words we dimly hear:
+              </p><br><br><br><br><br><br><p>
+              You, sent out beyond your recall,</p></p>
+              go to the limits of your longing.
+              Embody me.
+              </p><br><br><br><br><br><br><p>
+              Flare up like a flame</p></p>
+              and make big shadows I can move in.
+              </p><br><br><br><br><br><br><p>
+              Let everything happen to you: beauty and terror.</p></p>
+              Just keep going. No feeling is final.</p></p>
+              Don’t let yourself lose me.
+              </p><br><br><br><br><br><br><p>
+              Nearby is the country they call life.</p></p>
+              You will know it by its seriousness.
+              </p><br><br><br><br><br><br><p>
+              Give me your hand.
+              </p><br><br><br><br><br><br><p>
+              Rainer Maria Rilke</p></p>
+              Book of Hours, I 59
+          </p>
+          <img id="closeBook" src="assets/images/book.png" alt="book">
         </div>
       </div>
       <div id="campingOutdoors">
