up to books culture finished

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
           <p>If you've already been by my resume, you know I have my Masters in Literature.  For those two years my focus was in Modernism and Postmodernism, but don't worry I also like Harry Potter.  Even if you're not a reader, you'll no doubt learn to appreciate my occasional literary joke (normally referencing James Joyce) that often I'm the only person who knew it was a joke and almost always am the only who finds it funny.</p>
           <p>Once you've apprecaited that Rilke poem, the arrow moves you forward.</p>
           <img class="cultureBodyIcons" id="openBook" src="assets/images/book.png" alt="book">
-          <img class="nextArrow" src="assets/images/next.png"  alt="nextArrow">
+          <img id="booksArrow" class="nextArrow" src="assets/images/next.png"  alt="nextArrow">
         </div>
         <div id="secretPoemDiv">
           <p>
@@ -241,23 +241,23 @@
               </p><br><br><br><br><br><br><p>
               These are the words we dimly hear:
               </p><br><br><br><br><br><br><p>
-              You, sent out beyond your recall,</p></p>
+              You, sent out beyond your recall,</p><p>
               go to the limits of your longing.
               Embody me.
               </p><br><br><br><br><br><br><p>
-              Flare up like a flame</p></p>
+              Flare up like a flame</p><p>
               and make big shadows I can move in.
-              </p><br><br><br><br><br><br><p>
-              Let everything happen to you: beauty and terror.</p></p>
-              Just keep going. No feeling is final.</p></p>
+              </p><br><br><br><br><br><br><p class="rilke">
+              Let everything happen to you: beauty and terror.</p><p class="rilke">
+              Just keep going. No feeling is final.</p><p>
               Don’t let yourself lose me.
               </p><br><br><br><br><br><br><p>
-              Nearby is the country they call life.</p></p>
+              Nearby is the country they call life.</p><p>
               You will know it by its seriousness.
               </p><br><br><br><br><br><br><p>
               Give me your hand.
               </p><br><br><br><br><br><br><p>
-              Rainer Maria Rilke</p></p>
+              Rainer Maria Rilke</p><p>
               Book of Hours, I 59
           </p>
           <img id="closeBook" src="assets/images/book.png" alt="book">
