added gifapp link to games page

--- a/index.html
+++ b/index.html
@@ -112,6 +112,16 @@
           <div class="col">
             <img id="arrow4" class="gamesArrowImg" src="assets/images/carat.png" alt="arrow">
           </div>
+          <div class="col">
+            <div class="gamesImgContainer" id="triviaLink">
+              <a href="https://joewrightnc.github.io/GifApp/" target="_blank">
+                <img id="gifAppImg" class="gamesImg" src="assets/images/plus.png" alt="gifAppImg">
+                <div class="gamesOverlay">
+                  <div class="text">NETGIFZ: A Netflix style interface for gif browsing</div>
+                </div>
+              </a>
+            </div>
+          </div>
         </div>
       </div> 
     </div>
