--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           <div class="col">
             <div class="gamesImgContainer" id="triviaLink">
               <a href="https://joewrightnc.github.io/GifApp/" target="_blank">
-                <img id="gifAppImg" class="gamesImg" src="assets/images/plus.png" alt="gifAppImg">
+                <img id="gifAppcoImg" class="gamesImg" src="assets/images/plus.png" alt="gifAppImg">
                 <div class="gamesOverlay">
                   <div class="text">NETGIFZ: A Netflix style interface for gif browsing</div>
                 </div>
@@ -223,24 +223,30 @@
           </div>
       </div>
       <div id="music">
-        <div id="favoriteBands">
-        </div>
-        <div class="jumbotron cultureBlock">
+        <div class="jumbotron cultureBlock" id="musicFirst">
           <span class=cultureHeading>Music</span>
-          <p>Like so many, I too am a lover of music.  If we work together, one of the first things you'd probably notice me doing is asking you what type of music you're into.  I'm beyond casually into everything, and it is almost always a great place for me to start when getting to know someone new. </p>
-          <p>Some favorite genres include: post rock, folk/grassroots, hip hop, indie rock, psych rock, bluegrass--the list really goes on.  I had a radio show for 8 years on WKNC in Raleigh playing post rock, so I know the most there.  I've booked for several venues in Raleigh, including my own I ran for 3 years, and at the end of the day am most passionate about local music.</p>
-          <p>I play too, guitar since I was 4 years old.  I joke that I can play anything with strings on it, but it's pretty true.  Lately I've been most excited about fiddle and open tunings on my 12 string electric.</p>
-          <p>Hit that guitar button to see a random selection from my favorite bands.  When you're done, the arrow moves you on along.</p>
-          <img class="cultureBodyIcons" id="guitar" src="assets/images/guitar.png" alt="guitar">
+          <p>Like so many, I too am a lover of music.  I love to play as well as consume.  Music is almost always a great place for me to start a conversation when getting to know someone new. </p>
+          <p>Some favorite genres include: post rock, folk/grassroots, hip hop, indie rock, psych rock, bluegrass--the list really goes on.  I had a radio show in college playing post rock, so I know the most there.</p>
+          <p>I wanted to share a few clips of songs I like with you, so click that record icon to see my record player and pick a selection.  When you're finished, click that arrow.</p>
+          <img class="cultureBodyIcons" id="guitar" src="assets/images/record.png" alt="guitar">
           <img id="musicArrow" class="nextArrow" src="assets/images/next.png"  alt="nextArrow">
+        </div>
+        <div id="recordPlayerDiv">
+          <audio src="assets/audio/punchBrothers.mp3" type="audio/mp3" id="gameMusicSource1" class="gameMusic"> Audio player not available </audio>
+          <audio src="assets/audio/joseGonzalez.mp3" type="audio/mp3" id="gameMusicSource2" class="gameMusic"> Audio player not available </audio>
+          <audio src="assets/audio/johnButler.mp3" type="audio/mp3" id="gameMusicSource3" class="gameMusic"> Audio player not available </audio>
+          <img id="recordPlayer" src="assets/images/recordPlayerStill.png" alt="recordPlayerDown">
+          <button id="recordBtnOne" class="recordBtn">Punch Brothers<br><i>Julep</i></button>
+          <button id="recordBtnTwo" class="recordBtn">Jose Gonzalez<br><i>Cycling trivialities</i></button>
+          <button id="recordBtnThree" class="recordBtn">John Butler<br><i>Ocean</i></button>
+          <button id="recordBtnFour" class="recordBtn">End Listening Session</button>
+          <button id="recordPauseBtn">Pause Music</button>
         </div>
       </div>
       <div id="books">
         <div class="jumbotron cultureBlock" id="booksBlock">
           <span class=cultureHeading>Books</span>
-          <p>I love to read.  I've gone through a lot of phases in what I like to read most, but my first and most enduring passion is for poetry.  Vladamir Mayakovsky, a Russian Futurist, was the first poet I ever became enamoured with.  After several other favorites, I found Rainer Maria Rilke at 19 and hes topped my list ever since.  If you want to read one of my favorite short poems from Rilke, click that book icon.  The same icon will close the poem when you're finished.</p>
-          <p>If you've already been by my resume, you know I have my Masters in Literature.  For those two years my focus was in Modernism and Postmodernism, but don't worry I also like Harry Potter.  Even if you're not a reader, you'll no doubt learn to appreciate my occasional literary joke (normally referencing James Joyce) that often I'm the only person who knew it was a joke and almost always am the only who finds it funny.</p>
-          <p>Once you've apprecaited that Rilke poem, the arrow moves you forward.</p>
+          <p>better content coming</p>
           <img class="cultureBodyIcons" id="openBook" src="assets/images/book.png" alt="book">
           <img id="booksArrow" class="nextArrow" src="assets/images/next.png"  alt="nextArrow">
         </div>
