I added shake animation to home page, and coded through culture section, need to add features on last two pages once I think of them

--- a/index.html
+++ b/index.html
@@ -282,44 +282,233 @@
           </div>
         </div>
         <div class="poems" id="rilkeDiv">
-            <p>
-                God speaks to each of us as he makes us,</p><p>
-                then walks with us silently out of the night.
-                </p><br><br><br><br><br><br><p>
-                These are the words we dimly hear:
-                </p><br><br><br><br><br><br><p>
-                You, sent out beyond your recall,</p><p>
-                go to the limits of your longing.
-                Embody me.
-                </p><br><br><br><br><br><br><p>
-                Flare up like a flame</p><p>
-                and make big shadows I can move in.
-                </p><br><br><br><br><br><br><p>
-                Let everything happen to you: beauty and terror.</p><p>
-                Just keep going. No feeling is final.</p><p>
-                Don’t let yourself lose me.
-                </p><br><br><br><br><br><br><p>
-                Nearby is the country they call life.</p><p>
-                You will know it by its seriousness.
-                </p><br><br><br><br><br><br><p>
-                Give me your hand.
-                </p><br><br><br><br><br><br><p>
-                Rainer Maria Rilke</p><p>
-                Book of Hours, I 59
-            </p>
-            <button id="leavePoemBtn" class="recordBtn">Put This One Back</button>
+          <p>
+            These are the words we dimly hear:
+            </p><br><br><br><br><br><br><p>
+            You, sent out beyond your recall,</p><p>
+            go to the limits of your longing.
+            Embody me.
+            </p><br><br><br><br><br><br><p>
+            Flare up like a flame</p><p>
+            and make big shadows I can move in.
+            </p><br><br><br><br><br><br><p>
+            Let everything happen to you: beauty anterror.</p><p>
+            Just keep going. No feeling is final.</p><p>
+            Don’t let yourself lose me.
+            </p><br><br><br><br><br><br><p>
+            Nearby is the country they call life.</p><p>
+            You will know it by its seriousness.
+            </p><br><br><br><br><br><br><p>
+            Rainer Maria Rilke</p><p>
+            <i>Selection from Book of Hours, I 59</i>
+          </p>
+          <button class="leavePoemBtn recordBtn">Put This One Back</button>
         </div>
+        <div class="poems" id="ferlinghettiDiv">
+          <p>
+              Let’s go
+            </p><br><br><br><br><br><br><p>
+              Come on
+            </p><br><br><br><br><br><br><p>
+              Let’s go
+            </p><br><br><br><br><br><br><p>
+              Empty our pockets
+            </p><br><br><br><br><br><br><p>
+              And disappear.
+            </p><br><br><br><br><br><br><p>
+              Missing all our appointments
+            </p><br><br><br><br><br><br><p>
+              And turning up unshaven
+            </p><br><br><br><br><br><br><p>
+              Years later
+            </p><br><br><br><br><br><br><p>
+              Old cigarette papers
+            </p><br><br><br><br><br><br><p>
+              stuck to our pants
+            </p><br><br><br><br><br><br><p>
+              leaves in our hair.
+            </p><br><br><br><br><br><br><p>
+              Let us not
+            </p><br><br><br><br><br><br><p>
+              worry about the payments
+            </p><br><br><br><br><br><br><p>
+              anymore.
+            </p><br><br><br><br><br><br><p>
+              Let them come
+            </p><br><br><br><br><br><br><p>
+              and take it away
+            </p><br><br><br><br><br><br><p>
+              whatever it was
+            </p><br><br><br><br><br><br><p>
+              we were paying for.
+            </p><br><br><br><br><br><br><p>
+              And us with it.
+            </p><br><br><br><br><br><br><p>
+              Let us arise and go now
+            </p><br><br><br><br><br><br><p>
+              to where dogs do it
+            </p><br><br><br><br><br><br><p>
+              Over the Hill
+            </p><br><br><br><br><br><br><p>
+              where they keep the earthquakes
+            </p><br><br><br><br><br><br><p>
+              behind the city dumps
+            </p><br><br><br><br><br><br><p>
+              Lawrence Ferlinghetti</p><p>
+              <i>Selection from Junkman's Obligato</i>
+          </p>
+          <button class="leavePoemBtn recordBtn">Put This One Back</button>
+        </div>
+        <div class="poems" id="olsonDiv">
+          <p>
+              In cold hell, in thicket, how</p><p>
+              abstract (as high mind, as not lust, as love is) how</p><p>
+              strong (as strut or wing, as polytope, as things are</p><p>
+              constellated) how</p><p>
+              strung, how cold</p><p>
+              can a man stay (can men) confronted</p><p>
+              thus?
+            </p><br><br><br><br><br><br><p>
+              All things are made bitter, words even</p><p>
+              are made to taste like paper, wars get tossed up</p><p>
+              like lead soldiers used to be</p><p>
+              (in a child’s attic) lined up</p><p>
+              to be knocked down, as I am,</p><p>
+              by firings from a spit-hardened fort, fronted</p><p>
+              as we are, here, from where we must go
+            </p><br><br><br><br><br><br><p>
+              God, that man, as his acts must, as there is always</p><p>
+              a thing he can do, he can raise himself, he raises</p><p>
+              on a reed he raises his
+            </p><br><br><br><br><br><br><p>
+              Or, if it is me, what</p><p>
+              he has to say
+            </p><br><br><br><br><br><br><p>
+              I
+            </p><br><br><br><br><br><br><p>
+              What has he to say?</p><p>
+              In hell it is not easy</p><p>
+              to know the traceries, the markings</p><p>
+              (the canals, the pits, the mountings by which space</p><p>
+              declares herself, arched, as she is, the sister,</p><p>
+              awkward stars drawn for teats to pleasure him, the brother</p><p>
+              who lies in stasis under her, at ease as any monarch or
+              a happy man
+            </p><br><br><br><br><br><br><p>
+              How shall he who is not happy, who has been so made unclear,</p><p>
+              who is no longer privileged to be at ease, who, in this brush, stands</p><p>
+              reluctant, imageless, unpleasured, caught in a sort of hell, how</p><p>
+              shall he convert this underbrush, how turn this unbidden place</p><p>
+              how trace and arch again</p><p>
+              the necessary goddess?
+            </p><br><br><br><br><br><br><p>
+              Charles Olson</p><p>
+              <i>Selection from In Cold Hell, In Thicket</i>
+          </p>
+          <button class="leavePoemBtn recordBtn">Put This One Back</button>
+        </div>
+        <div id="ginsbergDiv">
+          <p>
+              Everything is holy! everybody’s holy! everywhere is holy! everyday is in eternity! Everyman’s an angel!</p><p>
+              The bum’s as holy as the seraphim! the madman is holy as you my soul are holy!</p><p>
+              The typewriter is holy the poem is holy the voice is holy the hearers are holy the ecstasy is holy!</p><p>
+              Holy Peter holy Allen holy Solomon holy Lucien holy Kerouac holy Huncke holy Burroughs holy Cassady holy the unknown buggered and suffering beggars holy the hideous human angels!</p><p>
+              Holy the groaning saxophone! Holy the bop apocalypse! Holy the jazzbands marijuana hipsters peace peyote pipes &amp; drums!</p><p>
+              Holy the solitudes of skyscrapers and pavements! Holy the cafeterias filled with the millions! Holy the mysterious rivers of tears under the streets!</p><p>
+              Holy the lone juggernaut! Holy the vast lamb of the middleclass! Holy the crazy shepherds of rebellion! Who digs Los Angeles IS Los Angeles!</p><p>
+              Holy New York Holy San Francisco Holy Peoria &amp; Seattle Holy Paris Holy Tangiers Holy Moscow Holy Istanbul!</p><p>
+              Holy time in eternity holy eternity in time holy the clocks in space holy the fourth dimension holy the fifth International holy the Angel in Moloch!</p><p>
+              Holy the sea holy the desert holy the railroad holy the locomotive holy the visions holy the hallucinations holy the miracles holy the eyeball holy the abyss!</p><p>
+              Holy forgiveness! mercy! charity! faith! Holy! Ours! bodies! suffering! magnanimity!</p><p>
+              Holy the supernatural extra brilliant intelligent kindness of the soul!
+            </p><br><br><br><br><br><br><p>
+              Allen Ginsberg</p><p>
+              <i>Selection from Howl</i>
+          </p>
+          <button class="leavePoemBtn recordBtn" id="leaveGinsbergBtn">Put This One Back</button>
+        </div>
+        <div class="poems" id="yeatsDiv">
+          <p>
+              Turning and turning in the widening gyre</p><p>   
+              The falcon cannot hear the falconer;</p><p>
+              Things fall apart; the centre cannot hold;</p><p>
+              Mere anarchy is loosed upon the world,</p><p>
+              The blood-dimmed tide is loosed, and everywhere </p><p>  
+              The ceremony of innocence is drowned;</p><p>
+              The best lack all conviction, while the worst  </p><p> 
+              Are full of passionate intensity.
+            </p><br><br><br><br><br><br><p>
+              Surely some revelation is at hand;</p><p>
+              Surely the Second Coming is at hand.</p><p>
+              The Second Coming! Hardly are those words out</p><p>  
+              When a vast image out of Spiritus Mundi</p><p>
+              Troubles my sight: somewhere in sands of the desert</p><p>   
+              A shape with lion body and the head of a man,</p><p>   
+              A gaze blank and pitiless as the sun,</p><p>   
+              Is moving its slow thighs, while all about it</p><p>   
+              Reel shadows of the indignant desert birds.</p><p>   
+              The darkness drops again; but now I know</p><p>   
+              That twenty centuries of stony sleep</p><p>
+              Were vexed to nightmare by a rocking cradle,</p><p>   
+              And what rough beast, its hour come round at last,</p><p>   
+              Slouches towards Bethlehem to be born?
+            </p><br><br><br><br><br><br><p>
+              William Butler Years</p><p>
+              <i>The Second Coming</i>
+          </p>
+          <button class="leavePoemBtn recordBtn">Put This One Back</button>
+        </div>
+        <div class="poems" id="mayakovskyDiv">
+          <p>
+              This is how books are made,</p><p>
+              I used to think,--</p><p>
+              Along comes a poet,</p><p>
+              And opens his lips with ease.</p><p>
+              Inspired, the fool simply begins to sing,--</p><p>
+              Oh please!</p><p>
+              It turns out:</p><p>
+              Before they can sing with elation,</p><p>
+              On their calloused feet they tramp for some time,</p><p>
+              While brainless fishes of imagination</p><p>
+              Are splashing and wallowing in the heart’s slime.</p><p>
+              And while, hissing with rhymes, they boil</p><p>
+              All the loves and the nightingales in a broth-like liquid,</p><p>
+              The tongueless street merely squirms and coils,--</p><p>
+              It has nothing to yell or even speak with.
+            </p><br><br><br><br><br><br><p>
+              In silence, the street dragged on the ordeal.</p><p>
+              A scream stood erect on the gullet’s road.</p><p>
+              While fat taxies and cabs were bristling still,</p><p>
+              Wedged in the throat.</p><p>
+              As if from consumption,</p><p>
+              the trodden chest gasped for air.
+            </p><br><br><br><br><br><br><p>
+              Vladimir Mayakovsky</p><p>
+              <i>Selection from A Cloud In Trousers</i>
+          </p>
+          <button class="leavePoemBtn recordBtn">Put This One Back</button>
+        </div>
+      
       </div>
       <div id="campingOutdoors">
-        <div class="jumbotron cultureBlock">
-          Joe likes camping
-          <img class="nextArrow" src="assets/images/next.png"  alt="nextArrow">
+        <div class="jumbotron cultureBlock" id="outdoorsLoad">
+          <p>
+            I love being outdoors, and spend almost every vacation I get going on camping roadtrips.  I'm an avid kayaker, a fan of long backpacking trips, and lover of the mountains.  I also enjoy car camping, and when that's the occasion I go in luxury with an inflatable couch that pulls out to a queen size mattress (one of my favorite luxuries).  I feel certain that one day, I'll be an RV owner.
+          </p>
+          <p>
+            Think of something cool for extra outdoor content. Click here.
+          </p>
+          <img class="cultureBodyIcons" id="trees" src="assets/images/trees.png" alt="trees">
+          <img id="campingArrow" class="nextArrow" src="assets/images/next.png"  alt="nextArrow">
+        </div>
+        <div id="trailFinder">
+          Think of something cool for extra outdoor content
         </div>
       </div>
       <div id="coding">
         <div class="jumbotron cultureBlock">
-          Joe likes coding
-          <img class="nextArrow" src="assets/images/next.png"  alt="nextArrow">
+          Joe likes coding.  Think of cool things to say about this.
+          <img id="codingArrow" class="nextArrow" src="assets/images/next.png"  alt="nextArrow">
         </div>
       </div>
     </div>
