changed nav event timing, much cleaner now.  also some copy in nav

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="jumbotron navTron container">
         <ul class="navUL">
           <li class="navBtns" id="resumeBtn" role="button"><span class="navSpan">Resume | CV</span></li>
-          <li class="navBtns" id="websitesBtn" role="button"><span class="navSpan">Websites</span></li>
+          <li class="navBtns" id="websitesBtn" role="button"><span class="navSpan">Web Projects</span></li>
           <li class="navBtns" id="gamesBtn" role="button"><span class="navSpan">Games | Apps</span></li>
           <li class="navBtns" id="designBtn" role="button"><span class="navSpan">Design | Graphics</span></li>
           <li class="navBtns" id="artBtn" role="button"><span class="navSpan">Art</span></li>
