education added to resume

--- a/index.html
+++ b/index.html
@@ -43,7 +43,101 @@
       </div>
     </div>
 
-    <div id="resumeDiv">Resume Page Coming Soon</div>
+    <div id="resumeDiv">
+      <img src="assets/images/resumeBG.png" id="resumeBackground" alt="resumeBackground">
+      <div id="container">
+        <div class="row" id="resumeRowOne">
+          <div class="col">
+            <h1>Joe Wright</h1>
+            <h3>Developer</h3>
+            <span id="resumeDownArrow">&darr;</span>
+          </div>
+        </div>
+        <div class="row" id="resumeRowTwo">
+          <div class="col">
+            <h2>Profile</h2>
+            <h4>I'm a creative full stack web developer</h4>
+            <hr>
+            <div class="row">
+              <div class="col">
+                <h3>Technologies:</h3>
+                <img src="assets/images/handHeldOne.jpg" alt="handHeldOne" id="handHeldOne">
+              </div>
+              <div class="col">
+                <br><br>
+                <h5>Day-to-Day:</h5>
+                <br>
+                <ul>
+                  <li>HTML 5</li>
+                  <li>CSS3</li>
+                  <li>Bootstrap 3.7 | 4.0</li>
+                  <li>Javascript</li>
+                  <li>jQuery</li>
+                  <li>node.JS</li>
+                  <li>React.JS</li>
+                  <li>MongoDB</li>
+                  <li>AJAX</li>
+                  <li>Photoshop | Gimp</li>
+                  <li>GIT</li>
+                  <li>Responsive Layouts</li>
+                  <li>Mobile First Thinking</li>
+                </ul>
+              </div>
+              <div class="col">
+                <br><br>
+                <h5>Experience With:</h5>
+                <br>
+                <ul>
+                  <li>VBA</li>
+                  <li>Wordpress</li>
+                  <li>Illustrator</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="experience row section-padding" id="resumeRowThree">
+  	      <div class="container experienceContainer">
+            <h3 class="experienceTitleLead">Education</h3>
+            <img src="assets/images/brain.png" alt="brain" id="brainImg">
+
+              <div class="experienceWrapper">
+                <div class="companyWrapper">
+                  <div class="experienceTitle">UNC Chapel Hill</div>
+                  <div class="time">Feb 2018 - Aug 2018</div>
+                </div>
+                <div class="jobWrapper">
+                  <div class="experienceTitle">Full Stack Development Certification</div>
+                  <div class="companyDescription">
+                    <p>Attended the University's full stack web development certification program.  Certification includes HTML5, CSS3, JavaScript, jQuery, Bootstrap, Express.js, React.js, Node.js, Database Theory, MongoDB, MySQL, Git, C#, Firebase, and ASP.Net</p>  
+                  </div>
+                </div>
+                <div class="companyWrapper">
+                  <div class="experienceTitle">NC State University</div> 
+                  <div class="time">Aug 2012 - May 2014</div> 
+                </div>
+                
+                <div class="jobWrapper">
+                  <div class="experienceTitle">MA American Literature</div> 
+                  <div class="companyDescription">
+                    <p>Received my MA in American Literature, focusing on conceptuatlizations of Modern and Postmodern thought in the American 20th century landscape and beyond.  Full Scholarship + Stipend Recipient.</p>  
+                  </div>
+                </div>
+              <div class="companyWrapper">
+                <div class="experienceTitle">NC State University</div> 
+                <div class="time">Aug 2006 - May 2011</div> 
+              </div> 
+              <div class="jobWrapper">
+                <div class="experienceTitle">BS Civil &AMP; Industrial Engineering </div> 
+                <div class="experienceTitle">BA English Literature</div> 
+                <div class="companyDescription">
+                  <p>Benjamin Franklin Scholarship Recipient; finished with 4.0 in English and 3.8 in Engineering. Editor-in-Chief of college literary magazine "Windhover" for three years, golden crown design award recipeint for all three.</p>   
+                </div>
+              </div>
+            </div>
+          </div>
+      </div>
+    </div>
 
     <div id="websitesDiv">Websites Page Coming Soon</div>
 
